--- a/templates/blog.html
+++ b/templates/blog.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <h1>Build a Blog</h1>
+    <h1>Blogz</h1>
     {% if posts|length == 0 %}
     <p>No posts yet</p>
     {% else %}
