--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Register to Build a Blog!</h1>
-<form action="/register" method="post">
+<h1>Sign Up to Blogz!</h1>
+<form action="/signup" method="post">
     <table>
         <tr>
             <td><label for="email">Email</label></td>
@@ -23,6 +23,6 @@
             </td>
         </tr>
     </table>
-    <input type="submit" value="Register">
+    <input type="submit" value="Sign Up">
 </form>
 {% endblock %}
