--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 {% block content %}
 <h1>Log in to Build a Blog!</h1>
 <p>If you don't have an account, you may <a href="/signup">Sign Up</a> for one</p>
+
 <form action="/login" method="post">
     <table>
         <tr>
@@ -11,12 +12,14 @@
                 <input name="email" type="email" value="{{ email }}">
             </td>
         </tr>
+        <p class="error">{{email_error}}</p>
         <tr>
             <td><label for="password">Password</label></td>
             <td>
                 <input name="password" type="password">
             </td>
         </tr>
+        <p clas="error">{{password_error}}</p>
     </table>
     <input type="submit" value="Login">
 </form>
