--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,18 +10,21 @@
                 <input name="email" type="email" value="{{ email }}">
             </td>
         </tr>
+        <p class="error">{{email_error}}</p>
         <tr>
             <td><label for="password">Password</label></td>
             <td>
                 <input name="password" type="password">
             </td>
         </tr>
+        <p class="error">{{password_error}}</p>
         <tr>
             <td><label for="verify">Verify Password</label></td>
             <td>
                 <input name="verify" type="password">
             </td>
         </tr>
+        <p class="error">{{verify_error}}</p>
     </table>
     <input type="submit" value="Sign Up">
 </form>
